# Wizard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  helper.cpp  helper.h  main.cpp
examples/file/: README.md  data.json  template.tpl
examples/file/result/: companies.txt
examples/file/result/Google/: Alan.txt  Olga.txt
examples/file/result/IBM/: Jonh.txt
examples/file/result/Microsoft/: Alex.txt  Dima.txt  Vitaly.txt
examples/simple/: README.md  data.json  template.tpl
test/: CMakeLists.txt  TestVisitor.h  helper.h  test-desc.cpp  test-environment.cpp  test-parser.cpp  test-project.cpp  test-render.cpp  test-transform.cpp  test-utils.cpp  tmain.cpp
test/data/: books.json  data.json  project.json
test/templates/: DatabaseSchema.json  DatabaseSchema.tpl  FieldSchema.tpl  TableSchemaId.tpl  info.json
test/templates/sql/: TableSchema.tpl
